--- a/index.html
+++ b/index.html
@@ -7,25 +7,16 @@
             <h6 style="white-space:nowrap;font-size:14px; color:#999;line-height: 1;margin: 0;font-weight: 400;"><a href="mailto:claudiu.creanga.backup@gmail.com" style="white-space:nowrap;text-decoration: none; color: #999">claudiu.creanga.backup@gmail.com</a> | <span style="white-space:nowrap;text-decoration:none!important;color: #999!important">07860 136 073</span></h6>
             <div style="white-space:nowrap;margin-top: 8px">
                 <a style="white-space:nowrap;display:inline-block;" href="https://github.com/ClaudiuCreanga">
-                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/github_circle_color-32.png">
-                </a>
-                <a style="white-space:nowrap;display:inline-block;" href="http://be.net/taroontyagi">
-                    <img style="white-space:nowrap;width: 30px;height:30px;" src="https://cdn2.iconfinder.com/data/icons/freebie-social-media-icons/32/behance.png">
+                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/github.png">
                 </a>
                 <a style="white-space:nowrap;display:inline-block;border-right: 1px solid #f1f1f1;padding-right: 5px" href="https://www.linkedin.com/in/claudiucreanga">
-                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-32.png">
-                </a>
-                <a style="white-space:nowrap;display:inline-block;" href="https://www.facebook.com/claudiudancreanga">
-                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-32.png">
+                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/linkedin.png">
                 </a>
                 <a style="white-space:nowrap;display:inline-block;" href="https://twitter.com/ClaudiuCreanga">
-                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_circle_color-32.png">
+                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/twitter.png">
                 </a>
-                <a style="white-space:nowrap;display:inline-block;" href="http://plus.google.com/+taroontyagi">
-                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/google_circle_color-32.png">
-                </a>
-                <a style="white-space:nowrap;display:inline-block;" href="http://pinterest.com/taroontyagi">
-                    <img style="white-space:nowrap;width: 30px;height:30px;" src="https://cdn2.iconfinder.com/data/icons/social-18/512/Pinterstt-32.png">
+                <a style="white-space:nowrap;display:inline-block;" href="http://stackoverflow.com/users/3711219/claudiu-creanga">
+                    <img style="white-space:nowrap;width: 32px;height:32px;" src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/stackoverflow.png">
                 </a>
             </div>
         </td>
