--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<table border="0" cellspacing="0" cellpading="0" style="white-space:nowrap;width:440px!important;">
+<table border="0" cellspacing="0" cellpading="0" style="white-space:nowrap;width:500px!important;">
     <tr>
-        <td style="white-space:nowrap;vertical-align:middle;width:113px"><img src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/photo.jpg" style="white-space:nowrap;border-right:1px solid #f1f1f1;padding-right: 12px;height: 100px"></td>
+        <td style="white-space:nowrap;vertical-align:middle;width:113px"><img src="https://raw.githubusercontent.com/ClaudiuCreanga/email-signature/master/images/photo.jpg" height="100" width="100" style="white-space:nowrap;border-right:1px solid #f1f1f1;padding-right: 12px;height: 100px"></td>
         <td style="white-space:nowrap;font-family:Helvetica, Arial;padding-left: 10px;font-size: 14px;vertical-align:middle;white-space:nowrap">
             <h1 style="white-space:nowrap;font-size:18px; color:#09c;line-height: 1;margin: 0 0 8px 0">Claudiu Creanga</h1>
             <h4 style="white-space:nowrap;font-size:14px; color:#333;line-height: 1;margin: 0 0 8px 0;font-weight: 400;">Software Engineer | <a href="sublimeinsights.com" style="white-space:nowrap;text-decoration: none; color: #333">www.claudiucreanga.me</a></h4>
